//! Wallet module for Super Cardano Node
//!
//! Provides key management, address derivation, UTXO selection, transaction construction/signing, and balance queries.
//!
//! All wallet operations are async, type-safe, and ready for REST/gRPC API integration.

use crate::ledger::{TxOutput, Transaction};
use crate::chaindb::SharedChainDB;
use serde::{Serialize, Deserialize};
use std::collections::HashMap;
use std::sync::Arc;
use tokio::sync::RwLock;

/// Represents a Cardano wallet (single address or HD wallet).
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct Wallet {
    /// Wallet name or label
    pub name: String,
    /// Public key (hex or bech32)
    pub public_key: String,
    /// Private key (encrypted, hex or bech32)
    pub private_key: String,
    /// All derived addresses (for HD wallets)
    pub addresses: Vec<String>,
    /// UTXOs owned by this wallet (tx_id, index) -> TxOutput
    pub utxos: HashMap<(u64, u32), TxOutput>,
    /// Cached balance (in lovelace)
    pub balance: u64,
}

impl Wallet {
    /// Create a new wallet with a random keypair (stub: replace with real crypto)
    pub async fn create(name: &str) -> Self {
        // TODO: Use real Cardano key generation and address derivation
        let public_key = format!("pubkey_{}", name);
        let private_key = format!("privkey_{}", name);
        let address = format!("addr1_{}", name);
        Self {
            name: name.to_string(),
            public_key,
            private_key,
            addresses: vec![address],
            utxos: HashMap::new(),
            balance: 0,
        }
    }

    /// Derive a new address (stub: replace with real HD derivation)
    pub async fn derive_address(&mut self) -> String {
        let new_addr = format!("addr1_{}_{}", self.name, self.addresses.len());
        self.addresses.push(new_addr.clone());
        new_addr
    }

    /// Query UTXOs and balance from the chain DB
    pub async fn sync_utxos(&mut self, db: &SharedChainDB) -> std::io::Result<()> {
        let db = db.read().await;
        let mut utxos = HashMap::new();
        let mut balance = 0u64;
        // For each address, scan all UTXOs (naive: optimize with index in production)
        for addr in &self.addresses {
            // This is a stub: in production, index UTXOs by address
            for block_id in db.block_ids().await? {
                let utxo_set = db.query_utxo_set(block_id).await?;
                for ((tx_id, idx), output) in utxo_set {
                    if &output.address == addr {
                        utxos.insert((tx_id, idx), output.clone());
                        balance += output.amount;
                    }
                }
            }
        }
        self.utxos = utxos;
        self.balance = balance;
        Ok(())
    }

    /// Get current balance (in lovelace)
    pub fn get_balance(&self) -> u64 {
        self.balance
    }

    /// Select UTXOs for a payment (simple greedy selection)
    pub fn select_utxos(&self, amount: u64) -> Option<Vec<((u64, u32), TxOutput)>> {
        let mut selected = Vec::new();
        let mut total = 0u64;
        for (k, v) in &self.utxos {
            selected.push((k.clone(), v.clone()));
            total += v.amount;
            if total >= amount {
                return Some(selected);
            }
        }
        None
    }

    /// Build a transaction to send funds (stub: no fee calculation, no change output)
    pub fn build_transaction(&self, to_address: &str, amount: u64) -> Option<Transaction> {
        let utxos = self.select_utxos(amount)?;
        let mut inputs = Vec::new();
        let mut input_total = 0u64;
        for ((tx_id, idx), output) in &utxos {
            inputs.push(crate::ledger::TxInput { prev_tx: *tx_id, index: *idx });
            input_total += output.amount;
        }
        let outputs = vec![TxOutput { address: to_address.to_string(), amount, assets: None }];
        // TODO: Add change output if input_total > amount
        Some(Transaction {
            id: 0, // Will be set by the node
            inputs,
            outputs,
            certificates: vec![],
            plutus_witnesses: vec![],
        })
    }

    /// Sign a transaction (stub: replace with real cryptographic signing)
    pub fn sign_transaction(&self, tx: &Transaction) -> String {
        // TODO: Use real Cardano transaction signing
        format!("signed_by_{}", self.public_key)
    }
}

/// Shared wallet handle for async/concurrent use
pub type SharedWallet = Arc<RwLock<Wallet>>;
